[package]
name = "pqsigs-fn-dsa"
version = "0.1.0"
edition = "2021"
description = "FN-DSA (FALCON) lattice-based post-quantum signature scheme"
license = "MIT"
repository = "https://github.com/kearneyjj1/pq-cryto"
keywords = ["cryptography", "post-quantum", "signature", "falcon", "fn-dsa"]
categories = ["cryptography"]

[dependencies]
rand = "0.8"
sha3 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"

[[bench]]
name = "fn_dsa_bench"
harness = false
