[package]
name = "pqsigs-ml-dsa"
version = "0.1.0"
edition = "2021"
description = "ML-DSA (Module-Lattice Digital Signature Algorithm) post-quantum signature scheme - FIPS 204"
license = "MIT"
keywords = ["cryptography", "post-quantum", "signature", "ml-dsa", "dilithium"]
categories = ["cryptography"]
repository = "https://github.com/kearneyjj1/pq-cryto"

[dependencies]
rand = "0.8"
sha3 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"

