[package]
name = "pqsigs-uov"
version = "0.1.0"
edition = "2021"
description = "UOV (Unbalanced Oil and Vinegar) post-quantum signature scheme implementation"
license = "MIT"
repository = "https://github.com/jkearney/pq-cryto"
keywords = ["cryptography", "post-quantum", "signature", "uov"]
categories = ["cryptography"]

[dependencies]
rand = "0.8"
sha3 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "uov_bench"
harness = false
